updates part 0